
<resources>
    <string name="app_name" translatable="false">SGR_Kenya</string>
    <string name="action_settings">Settings</string>


    <string name="txtpassword" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="create_account" translatable="false">Create Account</string>
    <string name="signup" translatable="false">SignUp</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="firstname" translatable="false">Firstname</string>
    <string name="lastname" translatable="false">Lastname</string>
    <string name="signup_prompt" translatable="false">Do you have an account?</string>
    <string name="Email" translatable="false">Email</string>
    <string name="National_ID" translatable="false">National_ID</string>
    <string name="Welcome" translatable="false">Welcome</string>
    <string name="title_activity_train_location" translatable="false">Map</string>
    <string name="google_maps_key" translatable="false">google_maps_key</string>
    <string name="Login_Activity" translatable="false">Login</string>
    <string name="Home_Activity" translatable="false">Home</string>
    <string name="Create_Account_Activity" translatable="false">Create Account</string>
    <string name="Class_select_prompt" translatable="false">Please select a class of choice!</string>
    <string name="Economy_Class" translatable="false">Economy Class</string>
    <string name="First_Class" translatable="false">First Class</string>
    <string name="Train" translatable="false">Train</string>
    <string name="Destination" translatable="false">Destination</string>
    <string name="Seats" translatable="false">Seats</string>
    <string name="Price" translatable="false">Price</string>
    <string name="Select_Class" translatable="false">Select Class</string>
    <string name="InputValidation" translatable="false">Input Validation</string>
    <string name="Booking">Booking</string>
    <string name="Available_Trains">Available Trains</string>
    <string name="Book">Book</string>
    <string name="Stations">Stations</string>
    <string name="submitStation">Submit Station</string>



    <string name="text_accounts" translatable="false">All Accounts</string>
    <string name="hint_name" translatable="false">Name</string>
    <string name="hint_email" translatable="false">Email</string>
    <string name="hint_password" translatable="false">Password</string>
    <string name="hint_confirm_password" translatable="false">Confirm Password</string>
    <string name="hint_id" translatable="false">National ID</string>
    <string name="text_login" translatable="false">Login</string>
    <string name="text_register" translatable="false">Register</string>
    <string name="error_message_name" translatable="false">Enter Full Name</string>
    <string name="error_message_email" translatable="false">Enter Valid Email</string>
    <string name="error_message_id" translatable="false">Enter Valid National ID</string>
    <string name="error_message_age" translatable="false">Enter Age</string>
    <string name="error_message_password" translatable="false">Enter Password</string>
    <string name="success_message" translatable="false">Registration Successful</string>
    <string name="text_not_member" translatable="false"><b>Click Here</b> to Create Account</string>
    <string name="text_already_member" translatable="false">Already a member? Login</string>
    <string name="error_email_exists" translatable="false">Email Already Exists</string>
    <string name="error_password_match" translatable="false">Password Does Not Match</string>
    <string name="error_valid_email_password" translatable="false">Wrong Email or Password</string>
    <string name="text_hello" translatable="false">Hello,</string>


    <string name="station_prompt">Choose a station</string>
    <string-array name="stationList">
        <item>Madaraka Station</item>
        <item>Mariakani Station</item>
        <item>Kikuyu Station</item>
        <item>Mombasa Station</item>
        <item>Mtitio-Andei Station</item>
    </string-array>


    <string name="title_activity_second_activity">Interstitial</string>
    <string name="msg_welcome">Welcome to the SGR App, Click on the button to launch the Interstitial ad.</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>

    <string name="banner_hotel">ca-app-pub-1093144503922289/4436428564</string>
    <string name="hotel_billboard">ca-app-pub-1093144503922289/7138613527</string>



</resources>
