<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation = "vertical"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:paddingBottom = "5dp"
    android:background="#d1d1d1"
    android:padding = "5dp">

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/train"
        android:text="@string/Train"
        android:textColor="#b30000"
        />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/price"
        android:text="@string/Price"

        />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/destination"
        android:text="@string/Destination"
        />

    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:id = "@+id/seats"
        android:text="@string/Seats"
        />



</LinearLayout>