<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/First_Class"
            tools:textSize="30sp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewTrainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewTrainDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewSeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageButton
            android:id="@+id/book"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="100dp"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/Book"
            android:src="@android:drawable/checkbox_on_background"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="50dp" />




    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingLeft="150dp"
        android:paddingTop="5dp"
        android:text="@string/Available_Trains"
        android:textColor="@android:color/black" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTrains"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>